# Project-Pass

./: README.md
pass-vault/: Cargo.toml
pass-vault/src/: main.rs  pentry.rs
