[package]
name = "pass-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
pqc_kyber = { version = "0.7.1", features = ["std"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = {version = "1.0.108"}

